# growfi-fix

./: .env.example  .gitignore  CLAUDE.md  README.md  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  railway.json  tailwind.config.ts  tsconfig.json
anchor/: Anchor.toml  package-lock.json
anchor/programs/growfi_core/: Cargo.toml
anchor/programs/growfi_core/src/: errors.rs  events.rs  lib.rs  state.rs
anchor/programs/growfi_core/src/instructions/: admin.rs  creator.rs  decoration.rs  farm.rs  farming.rs  marketplace.rs  mod.rs  player.rs  quest.rs  shop.rs  trade.rs
anchor/scripts/: create-shop-rotation.ts  growfi-devnet-utils.ts  initialize-config.ts  seed-catalog.ts  test-player-flow.ts
anchor/tests/: growfi_core.ts  helpers.ts
app/: globals.css  layout.tsx  page.tsx  providers.tsx
app/game/: page.tsx
app/inventory/: page.tsx
app/leaderboard/: page.tsx
app/marketplace/: page.tsx
app/play/: page.tsx
app/profile/: page.tsx
app/shop/: page.tsx
app/trade/: page.tsx
app/wallet/: page.tsx
components/game/: GameCanvas.tsx  GameClient.tsx  GameHUD.tsx  GameOverlay.tsx  GlobalChatWidget.tsx  InteractionPrompt.tsx  MobileControls.tsx  ProgressionPanel.tsx  TutorialOnboardingDialog.tsx  WalletGate.tsx  (+1 more)
docs/: antigravity-code-review.md  economy-source-of-truth.md  realtime-production-plan.md
hooks/: use-media-query.ts
prisma/: schema.prisma  seed.ts
scripts/: simulate-realtime.ts
server/: dev.ts  socket.ts
store/: useGameStore.ts
types/: game-data.ts  game.ts  next-auth.d.ts
(+144 files in other folders)
